--- a/basePresentar_AAA/src/basepresentar_aaa/Clientes.form
+++ b/basePresentar_AAA/src/basepresentar_aaa/Clientes.form
@@ -1169,9 +1169,7 @@
     </Component>
     <Container class="javax.swing.JDesktopPane" name="jDesktopPane1">
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
-        <Property name="useNullLayout" type="boolean" value="true"/>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout"/>
     </Container>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
